@@ -76,74 +76,78 @@ public class JMXReport {
      * Creates a JMX friendly version of the given report
      */
     public JMXReport(Report report) throws Exception {
-        
+
         this.uuid = report.getUUID();
         this.pendingTasks = report.getNumberOfPendingTasks();
         this.tasks = report.getNumberOfTasks();
         this.startTime = report.getStartTime();
         this.stopTime = report.getStopTime();
-    
+
         this.type = report.getType();
-    
+
         try {
             JSONObject jsonData = (JSONObject) JSONCoercion.coerceToJSON(report.getData());
-            
+
             jsonData.put("uuid", uuid);
             jsonData.put("reportType", type);
-            
+
             jsonData.put("timestamps", new JSONObject().put("start", startTime).put("stop", stopTime));
             jsonData.put("version", new JSONObject().put("version", Version.getInstance().getVersionString()).put("buildDate", Version.getInstance().getBuildDate()));
-            
+
             this.data = jsonData.toString();
         } catch (JSONException e) {
             throw new Exception(e.getMessage());
         }
     }
 
-    
+
     public String getUuid() {
         return uuid;
     }
 
-    
+
     public int getPendingTasks() {
         return pendingTasks;
     }
 
-    
+
     public int getTasks() {
         return tasks;
     }
 
-    
+
     public long getStartTime() {
         return startTime;
     }
 
-    
+
     public long getStopTime() {
         return stopTime;
     }
 
-    
+
     public String getType() {
         return type;
     }
 
-    
+
     public String getData() {
         return data;
     }
-    
+
     /**
      * A utility method for wrapping an array of reports
      */
     public static JMXReport[] wrap(Report[] reports) throws Exception {
+        if (null == reports) {
+            return null;
+        }
         JMXReport[] wrapped = new JMXReport[reports.length];
         for (int i = 0; i < reports.length; i++) {
-            wrapped[i] = new JMXReport(reports[i]);
+            Report report = reports[i];
+            wrapped[i] = null == report ? null : new JMXReport(report);
         }
-        
+
         return wrapped;
     }
 }
