@@ -1,6 +1,7 @@
 * 2013-10-30 - thorben.betten@open-xchange.com
 
  - Fix for bug 29512: Fixed associated Microformat publication template and applied proper timeout
+ - Fix for bug 29561: Added null guards to reporting tool if 'Orchestration' has no last report available
 
 * 2013-10-29 - thorben.betten@open-xchange.com
 
